test/translator/success/imports/file.prez
int func() {
  return 2;
}

int func(int n) {
  return n + 1;
}


class Rectangle {
  long length;
  long width;

  Rectangle(long len, long wid) {
    this.length = len;
    this.width = wid;
  }

  long area() {
    return this.length * this.width;
  }
}
