test/translator/error/inheritance.prez
class Base {
  int n;

  Base(int n) {
    this.n = n;
  }

  public virtual String name() {
    return "Base";
  }

  public String toString() {
    return toString(this.n);
  }
}

class Derived : Base {
  Derived(int n) {
    this.n = n;
  }

  public String name() {
    return "Derived";
  }

  public String toString() {
    return toString(this.n);
  }
}

class GrandChild : Derived {
  int n;

  public virtual String name() {
    return "GrandChild";
  }
}
